worked on floodlighhts page

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">LED DOWN LIGHT </h1>
-                                 <h5 class="tasty_text">GLASS 3IN1</h5>
-                                 <p class="banner_text">WH/BL/WW </p>
+                                 <h1 class="banner_taital" style="color: white;">LED DOWN LIGHT </h1>
+                                 <h5 class="tasty_text" style="color: blue;">GLASS 3IN1</h5>
+                                 <p class="banner_text" style="color: blue;">WH/BL/WW </p>
                                  <div class="btn_main">
-                                    <div class="about_bt"><a href="#">View</a></div>
+                                    <div class="about_bt"><a href="./products/panels.html">View</a></div>
                                  </div>
                               </div>
                            </div>
@@ -117,12 +117,12 @@
                               <div class="banner_img"><img src="images/music.jpeg"></div>
                            </div>
                            <div class="col-md-6">
-                              <div class="banner_taital_main">
-                                 <h1 class="banner_taital">LED MUSIC BULB</h1>
-                                 <h5 class="tasty_text">RGB BULB WITH BLUETOOTH SPEAKER</h5>
-                                 <p class="banner_text">COMES WITH A REMOTE </p>
+                              <div class="banner_taital_main" >
+                                 <h1 class="banner_taital" style="color: white;">LED MUSIC BULB</h1>
+                                 <h5 class="tasty_text" style="color: blue;">RGB BULB WITH BLUETOOTH SPEAKER</h5>
+                                 <p class="banner_text" style="color: blue;">COMES WITH A REMOTE </p>
                                  <div class="btn_main">
-                                    <div class="about_bt"><a href="#">View</a></div>
+                                    <div class="about_bt"><a href="./products/led_bulb.html">View</a></div>
                                  </div>
                               </div>
                            </div>
@@ -135,11 +135,11 @@
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital">LED TABLE LAMP</h1>
-                                 <h5 class="tasty_text">RECHARGEABLE</h5>
-                                 <p class="banner_text">IMPERIAL DESIGNS </p>
+                                 <h1 class="banner_taital" style="color: white;">LED TABLE LAMP</h1>
+                                 <h5 class="tasty_text" style="color: blue;">RECHARGEABLE</h5>
+                                 <p class="banner_text" style="color: blue;">IMPERIAL DESIGNS </p>
                                  <div class="btn_main">
-                                    <div class="about_bt"><a href="#">View</a></div>
+                                    <div class="about_bt"><a href="./products/table.html">View</a></div>
                                  </div>
                               </div>
                            </div>
