--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | LED Strip Lights</title>
+      <title>Neelux | Flood Lights</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sector">
+      <div class="header_sectors">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -98,13 +98,13 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/strips/header/10.jpg"></div>
+                              <div class="banner_img"><img src="img/floods/header/ac flood.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: white;">LED STRIP LIGHTS </h1>
-                                 <h5 class="tasty_text" style="color: blue;">DOUBLE EYED </h5>
-                                 <p class="banner_text" style="color: blue;">ALL COLORS</p>
+                                 <h1 class="banner_taital" style="color: white;">LED FLOOD LIGHT </h1>
+                                 <h5 class="tasty_text" style="color: blue;">A.C </h5>
+                                 <p class="banner_text" style="color: blue;">ALL WATTS</p>
                               </div>
                            </div>
                         </div>
@@ -112,13 +112,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/strips/header/3.jpg"></div>
+                              <div class="banner_img"><img src="img/floods/header/fr2.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: white;">LED STRIP LIGHTS</h1>
-                                 <h5 class="tasty_text" style="color: blue;">SINGLE EYED</h5>
-                                 <p class="banner_text" style="color: blue;">ALL COLORS</p>
+                                 <h1 class="banner_taital" style="color: white;">LED FLOOD LIGHT</h1>
+                                 <h5 class="tasty_text" style="color: blue;">50W</h5>
+                                 <p class="banner_text" style="color: blue;">AC / DC</p>
                               </div>
                            </div>
                         </div>
@@ -127,12 +127,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/strips/header/s3.jpeg"></div>
+                              <div class="banner_img"><img src="img/floods/header/solar.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital" style="color: white;">LED STRIP LIGHTS</h1>
-                              <h5 class="tasty_text" style="color: blue;">MULTI-COLORED</h5>
+                              <h1 class="banner_taital" style="color: white;">LED FLOOD LIGHT</h1>
+                              <h5 class="tasty_text" style="color: blue;">SOLAR (DC)</h5>
+                              <p class="banner_text" style="color: blue;">LONG LASTING</p>
                            </div>
                               </div>
                            </div>
@@ -166,20 +167,20 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/1.jpg"></div>
-                              <h3 class="types_text">SINGLE EYE STRIP</h3>
+                              <div class="coffee_img"><img src="img/floods/flood.jpg"></div>
+                              <h3 class="types_text">SOLAR FLOOD LIGHT 200W</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/2.jpg"></div>
-                              <h3 class="types_text">THREE EYE STRIP</h3>
+                              <div class="coffee_img"><img src="img/floods/flood30.jpg"></div>
+                              <h3 class="types_text">SOLAR FLOOD LIGHT 30W</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/4.jpeg"></div>
-                              <h3 class="types_text">LED STRIP LIGHTS</h3>
+                              <div class="coffee_img"><img src="img/floods/fr3.jpeg"></div>
+                              <h3 class="types_text">AC FLOOD LIGHT 100W</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/7.jpg"></div>
-                              <h3 class="types_text">DOUBLE EYE STRIP</h3>
+                              <div class="coffee_img"><img src="img/floods/fr5.jpeg"></div>
+                              <h3 class="types_text">AC FLOOD LIGHT 50W</h3>
                            </div>
                         </div>
                      </div>
@@ -217,80 +218,7 @@
          </div>
       </div>
       <!-- LIGHTS section end -->
-      <!-- LIGHTS section start -->
-      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
-         <!-- <div class="container">
-            <div class="row">
-               <h1 class="coffee_taital">OUR ITEMS</h1>
-               <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
-            </div>
-         </div> -->
-         <div class="coffee_section_2">
-            <div id="main_slider" class="carousel slide" data-ride="carousel">
-               <div class="carousel-inner">
-                  <div class="carousel-item active">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/st.jpg"></div>
-                              <h3 class="types_text">PINK STRIP LIGHT</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/st2.jpg"></div>
-                              <h3 class="types_text">BLUE STRIP LIGHT</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/st3.jpg"></div>
-                              <h3 class="types_text">RED STRIP LIGHT</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/strips/header/bg-1.png"></div>
-                              <h3 class="types_text">RGB STRIPS</h3>
-                           </div>
-                        </div>
-                     </div>
-                  </div>
-            </div>
-         </div>
-      </div>
-      <!-- LIGHTS section end -->
-      <!-- LIGHTS section start -->
-      <div class="coffee_section layout_padding" style="margin-bottom: 60px;">
-         <!-- <div class="container">
-            <div class="row">
-               <h1 class="coffee_taital">OUR ITEMS</h1>
-               <div class="bulit_icon"><img src="../images/bulit-icon.png"></div>
-            </div>
-         </div> -->
-         <!-- <div class="coffee_section_2">
-            <div id="main_slider" class="carousel slide" data-ride="carousel">
-               <div class="carousel-inner">
-                  <div class="carousel-item active">
-                     <div class="container-fluid">
-                        <div class="row">
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl6.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl7.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
-                           </div>
-                           <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wall.jpg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
-                           </div> -->
-                           <!-- <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl5.jpeg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
-                           </div> -->
-                        </div>
-                     </div>
-                  </div>
-            </div>
-         </div>
-      </div>
-      <!-- LIGHTS section end -->
+
      
       <!-- footer section start -->
  
@@ -378,7 +306,7 @@
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="../products/down.html">Panel Lamps</a>
+                                  <a href="../products/panels.html">Panel Lamps</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
