--- a/products/wall.html
+++ b/products/wall.html
@@ -403,7 +403,7 @@
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="../products/down.html">Panel Lamps</a>
+                                  <a href="../products/panels.html">Panel Lamps</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
