--- a/products/led_bulb.html
+++ b/products/led_bulb.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css">
       <!-- style css -->
       <link rel="stylesheet" type="text/css" href="../css/style.css">
+      <link rel="stylesheet" type="text/css" href="./CSS/styles.css">
       <!-- Responsive-->
       <link rel="stylesheet" href="../css/responsive.css">
       <!-- fevicon -->
@@ -30,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_section">
+      <div class="header_sections">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -42,7 +43,7 @@
              <div class="collapse navbar-collapse" id="navbarSupportedContent">
                <ul class="navbar-nav ml-auto">
                  <li class="nav-item active">
-                   <a class="nav-link" href="index.html">Home</a>
+                   <a class="nav-link" href="../index.html">Home</a>
                  </li>
                  <!-- <li class="nav-item">
                    <a class="nav-link" href="product.html">Product</a>
@@ -331,7 +332,7 @@
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/down.html">Panel Lamps</a>
+                                  <a href="./products/panels.html">Panel Lamps</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
