index.htm links

--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/panel.jpeg"></div>
                               <h3 class="types_text">LED PANEL LAMP</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/panels.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/1.jpeg"></div>
                               <h3 class="types_text">CEILING LIGHT</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/ceilin.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/tube.jpeg"></div>
                               <h3 class="types_text">LED TUBE</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/tubes.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/rail2.jpeg"></div>
                               <h3 class="types_text">SHORT TRACK RAILS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/accessories.html">Check it</a></div>
                            </div>
                         </div>
                      </div>
@@ -201,22 +201,22 @@
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/filamnt5.jpeg"></div>
                               <h3 class="types_text">FILAMENT BULB</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/filament.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/garden.jpeg"></div>
                               <h3 class="types_text">LED GARDEN LAMP</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/fan.jpeg"></div>
                               <h3 class="types_text">LED FAN BULB</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/led_bulb.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/tablwblonze.jpeg"></div>
                               <h3 class="types_text">TABLE LAMPS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/table.html">Check it</a></div>
                            </div>
                         </div>
                      </div>
@@ -227,22 +227,22 @@
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/wl4.jpeg"></div>
                               <h3 class="types_text">WALL LAMPS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/wall.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/solar street grey.jpeg"></div>
                               <h3 class="types_text">SOLAR STREET LIGHT</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/street.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/flood30.jpg"></div>
                               <h3 class="types_text">SOLAR FLOODLIGHT</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/flood.html">Check it</a></div>
                            </div>
                            <div class="col-lg-3 col-md-6">
                               <div class="coffee_img"><img src="images/3.jpeg"></div>
                               <h3 class="types_text">STRIP LIGHTS</h3>
-                              <div class="read_bt"><a href="#">Check it</a></div>
+                              <div class="read_bt"><a href="./products/strip.html">Check it</a></div>
                            </div>
                         </div>
                      </div>
