doen with filament bulbs page

--- a/products.html
+++ b/products.html
@@ -235,20 +235,20 @@
         <h2>Our Products</h2>
         <div class="product-grid">
           <div class="product">
-            <a href="#">
+            <a href="./products/down.html">
               <img src="./assets/img/display/down.jpeg" alt="DOWN LIGHT" />
             </a>
             <h3>DOWN LIGHTS</h3>
           </div>
           <div class="product">
-            <a href="product2.html">
+            <a href="./products/track.html">
               <img src="./assets/img/display/track.jpeg" alt="TRACK LIGHTS" />
             </a>
             <h3>TRACK LIGHTS</h3>
             
           </div>
           <div class="product">
-            <a href="product3.html">
+            <a href="./products/led_bulb.html">
               <img src="./assets/img/display/7wr.jpeg" alt=" LED BULBS" />
             </a>
             <h3>LED BULBS</h3>
@@ -260,20 +260,20 @@
       <section class="product-section">
         <div class="product-grid">
           <div class="product">
-            <a href="#">
+            <a href="./products/filament.html">
               <img src="./assets/img/display/filament.jpeg" alt="FILAMENT BULBS" />
             </a>
             <h3>FILAMENT BULBS</h3>
 
           </div>
           <div class="product">
-            <a href="product2.html">
+            <a href="./products/flood.html">
               <img src="./assets/img/floods/flood30.jpg" alt="FLOOD LIGHTS" />
             </a>
             <h3>FLOOD LIGHTS</h3>
           </div>
           <div class="product">
-            <a href="product3.html">
+            <a href="./products/street.html">
               <img src="./assets/img/floods/solr street black.jpeg" alt="STREET LIGHTS" />
             </a>
             <h3>STREET LIGHTS</h3>
@@ -284,19 +284,19 @@
       <section class="product-section">
         <div class="product-grid">
           <div class="product">
-            <a href="#">
+            <a href="./products/wall.html">
               <img src="./assets/img/display/wall.jpeg" alt="WALL LAMPS" />
             </a>
             <h3>WALL LAMPS</h3>
          </div>
           <div class="product">
-            <a href="product2.html">
+            <a href="./products/chandelier.html">
               <img src="./assets/img/display/CHANDELIER.png" alt="CHANDELIERS" />
             </a>
             <h3>CHANDELIERS</h3>
           </div>
           <div class="product">
-            <a href="product3.html">
+            <a href="./products/tubes.html">
               <img src="./assets/img/display/tube.jpeg" alt="LED TUBES" />
               <img src="./assets/img/tubes/led-tube.jpeg" alt="LED TUBES" />
             </a>
@@ -308,19 +308,19 @@
       <section class="product-section">
         <div class="product-grid">
           <div class="product">
-            <a href="#">
+            <a href="./products/table.html">
               <img src="./assets/img/display/table.jpeg" alt="TABLE LAMPS" />
             </a>
             <h3>TABLE LAMPS</h3>
        </div>
           <div class="product">
-            <a href="product2.html">
+            <a href="./products/accessories.html">
               <img src="./assets/img/display/rail2.jpeg" alt="LED ACCESSORIES" />
             </a>
             <h3>LED ACCESSORIES</h3>
           </div>
           <div class="product">
-            <a href="product3.html">
+            <a href="./products/emergency.html">
               <img src="./assets/img/seller/recharge.jpg" alt="EMERGENCY LAMPS" />
             </a>
             <h3>EMERGENCY LAMPS</h3>
@@ -334,19 +334,19 @@
       <section class="product-section">
         <div class="product-grid">
           <div class="product">
-            <a href="#">
+            <a href="./products/strip.html">
               <img src="./assets/img/display/strip.jpeg" alt="SNAKE LIGHT" />
             </a>
             <h3>STRIP LIGHTS</h3>
          </div>
           <div class="product">
-            <a href="product2.html">
+            <a href="./single-product.html">
               <img src="./assets/img/display/garden.jpeg" alt="GARDEN LIGHTS" />
             </a>
             <h3>GARDEN LIGHTS</h3>
           </div>
           <div class="product">
-            <a href="product3.html">
+            <a href="./products/ceilin.html">
               <img src="./assets/img/display/CEILING/2.jpeg" alt="CEILING LIGHTS" />
             </a>
             <h3>CEILING LIGHTS</h3>
