--- a/products/test.html
+++ b/products/test.html
@@ -9,7 +9,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>Neelux | Flood Lights</title>
+      <title>Neelux | Filament Bulbs</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -31,7 +31,7 @@
       <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
    </head>
    <body>
-      <div class="header_sectors">
+      <div class="header_sectory">
          <div class="container-fluid">
             <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top navbar" style="background-color: aliceblue;">
              <!-- Uncomment below if you prefer to use an image logo -->
@@ -98,13 +98,13 @@
                      <div class="carousel-item active">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/floods/header/ac flood.jpg"></div>
+                              <div class="banner_img"><img src="img/filament/header/f2.jpeg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: white;">LED FLOOD LIGHT </h1>
-                                 <h5 class="tasty_text" style="color: blue;">A.C </h5>
-                                 <p class="banner_text" style="color: blue;">ALL WATTS</p>
+                                 <h1 class="banner_taital" style="color: rgb(33, 250, 0);">FILAMENT BULB </h1>
+                                 <h5 class="tasty_text" style="color: rgb(0, 191, 255);">ROUND DESIGNS</h5>
+                                 <p class="banner_text" style="color: rgb(0, 191, 255);">ALL WATTS</p>
                               </div>
                            </div>
                         </div>
@@ -112,13 +112,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/floods/header/fr2.jpg"></div>
+                              <div class="banner_img"><img src="img/filament/header/2.jpg"></div>
                            </div>
                            <div class="col-md-6">
                               <div class="banner_taital_main">
-                                 <h1 class="banner_taital" style="color: white;">LED FLOOD LIGHT</h1>
-                                 <h5 class="tasty_text" style="color: blue;">50W</h5>
-                                 <p class="banner_text" style="color: blue;">AC / DC</p>
+                                 <h1 class="banner_taital" style="color: rgb(33, 250, 0);">FILAMENT BULB</h1>
+                                 <h5 class="tasty_text" style="color: rgb(0, 191, 255);">ENERGY EFFICIENT</h5>
+                                 <p class="banner_text" style="color: rgb(0, 191, 255);">SCREW</p>
                               </div>
                            </div>
                         </div>
@@ -127,13 +127,13 @@
                      <div class="carousel-item">
                         <div class="row">
                            <div class="col-md-6">
-                              <div class="banner_img"><img src="img/floods/header/solar.jpg"></div>
+                              <div class="banner_img"><img src="img/filament/header/3.jpg"></div>
                            </div>
                            <div class="col-md-6">
                             <div class="banner_taital_main">
-                              <h1 class="banner_taital" style="color: white;">LED FLOOD LIGHT</h1>
-                              <h5 class="tasty_text" style="color: blue;">SOLAR (DC)</h5>
-                              <p class="banner_text" style="color: blue;">LONG LASTING</p>
+                              <h1 class="banner_taital" style="color: rgb(33, 250, 0);">FILAMENT BULB</h1>
+                              <h5 class="tasty_text" style="color: rgb(0, 191, 255);">ROUND</h5>
+                              <p class="banner_text" style="color: rgb(0, 191, 255);">LONG LASTING</p>
                            </div>
                               </div>
                            </div>
@@ -167,47 +167,47 @@
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/floods/flood.jpg"></div>
-                              <h3 class="types_text">SOLAR FLOOD LIGHT 200W</h3>
+                              <div class="coffee_img"><img src="img/filament/1.jpg"></div>
+                              <h3 class="types_text">4W CANDLE BULB </h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/floods/flood30.jpg"></div>
-                              <h3 class="types_text">SOLAR FLOOD LIGHT 30W</h3>
+                              <div class="coffee_img"><img src="img/filament/cand.jpg"></div>
+                              <h3 class="types_text">4W CANDLE</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/floods/fr3.jpeg"></div>
-                              <h3 class="types_text">AC FLOOD LIGHT 100W</h3>
+                              <div class="coffee_img"><img src="img/filament/filament (2).jpg"></div>
+                              <h3 class="types_text">6W ROUND BULB</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/floods/fr5.jpeg"></div>
-                              <h3 class="types_text">AC FLOOD LIGHT 50W</h3>
+                              <div class="coffee_img"><img src="img/filament/normal.jpg"></div>
+                              <h3 class="types_text">4W BULB</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-                  <!-- <div class="carousel-item">
+                  <div class="carousel-item">
                      <div class="container-fluid">
                         <div class="row">
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wall2_edited.jpg"></div>
-                              <h3 class="types_text">WALL LAMP </h3>
+                              <div class="coffee_img"><img src="img/filament/fila.jpg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wall3_edited.jpg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/filament/filamnt5.jpg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wall4_edited.jpg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/filament/filament2.jpg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
                            </div>
                            <div class="col-lg-3 col-md-6">
-                              <div class="coffee_img"><img src="img/walls/wl1.jpg"></div>
-                              <h3 class="types_text">WALL LAMP</h3>
+                              <div class="coffee_img"><img src="img/filament/filament4.jpg"></div>
+                              <h3 class="types_text">FILAMENT BULBS</h3>
                            </div>
                         </div>
                      </div>
                   </div>
-               </div> -->
+               </div>
                <a class="carousel-control-prev" href="#main_slider" role="button" data-slide="prev">
                <i class="fa fa-arrow-left"></i>
                </a>
