--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
-                                  <a href="./products/down.html">Panel Lamps</a>
+                                  <a href="./products/panels.html">Panel Lamps</a>
                                 </li>
                                 <li>
                                   <i class="bx bx-chevron-right"></i>
